--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "next": "15.3.2",
     "react": "^19.0.0",
