--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,16 @@
         "name": "next"
       }
     ],
-    
-    "baseUrl": "src",
+    "baseUrl": ".",                // ✅ alterado de "src" para "."
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./*"]               // ✅ alterado para refletir a raiz real
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
